# argos-llm-translate

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: license-notes.md
examples/: config.example.toml  glossary.example.json  glossary.example.yaml
src/local_translator/: __init__.py  api.py  cli.py  config.py  logging_utils.py  reporting.py
src/local_translator/engines/: argos_engine.py  llm_engine.py
src/local_translator/extractors/: base.py  docx.py  md.py  pdf_text.py  pptx.py  txt.py  xlsx.py
src/local_translator/glossary/: store.py
src/local_translator/gui/: __init__.py  stub.py
src/local_translator/models/: types.py
src/local_translator/pipeline/: chunker.py  hybrid_strategy.py  postedit.py  translator.py
src/local_translator/reconstructors/: registry.py
tests/acceptance/: test_end_to_end.py
tests/fixtures/: sample.md  sample.txt
tests/integration/: document_fixture_builder.py  test_api.py  test_cli_reporting.py  test_cli_validation.py  test_pipeline_documents.py  test_pipeline_text.py
tests/unit/: test_chunker.py  test_glossary.py  test_hybrid_strategy.py  test_postedit.py  test_reporting.py
